[project]
name = "nsyspy"
version = "0.1.0"
description = "A growing set of tools to help run and analyze Nsight Systems traces."
authors = [
    {name = "icyveins7",email = "icyveins@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "s3ew (>=0.0.4,<0.0.5)"
]

[tool.poetry]
packages = [{include = "nsyspy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
